@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
/' 16장 : plus와 times 구현
'/
class Money
interface Expression
class Bank
class Sum
class Pair
Expression <|.. Money
Money <.. Bank
Expression <|.. Sum
Bank <-- Pair
class Money{
 #currency : String
 #multiplication : int
 +Money(amount : int, currency : String)
 +dollar(amount : int) : {static} Money
 +franc(amount : int) : {static} Money
 +eqals(objects : Object) : boolean
 +currency() : String
 +toString() : String
 +times(multiplication : int) : Expression
 +plus(addend : Expression) : Expression
 +reduce(bank : Bank, to : String) : Money
}
interface Expression{
 +plus(added : Expression) Expression
 +reduce(bank : Bank, to : String) : Money
 +times(multiplication : int) : Expression
}
class Bank{
 -rates : Hashable
 +reduce(source : Expression, to : String) : Money
 +rate(from : String, to : String) : int
 +addRate(from : String, to : String, rate : int) : void
}
class Sum{
 +augend : Expression
 +addend : Expression
 +Sum(augend : Expression, addend : Expression)
 +reduce(bank : Bank, to : String) : Money
 +plus(added : Expression) : Expression
 +times(multiplication : int) : Expression
}
class Pair {
 -from : String
 -to : String
  +Pair(from : String, to : String)
  +equals(Object object) : boolean
  +hashCode() : int
}
@enduml